--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: This is my Portfolio
 # User settings
 username: Noor ul haq
 user_description: I am a result-oriented, self-motivated React/React Native developer with experience of working with different startups and a few freelance projects. I have been learning and working with different Javascript tools and technologies for quite some time. I find server-side development very interesting and have been learning Docker, a little bit of Kubernetes and Microservice Architecture recently. I love building products and learning new technologies.
-user_title: Javascript Developer
+user_title: Javascript Developer 👨‍💻 🚀
 email: noor.ul.haq93@gmail.com
 twitter_username: nurlhq
 github_username:  Noor0
